--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ robotpy_version = "2025.3.1.0"
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
 robotpy_extras = [
-    # "all"
     #"apriltag",
     "commands2",
     # "cscore"
@@ -22,7 +21,7 @@ robotpy_extras = [
     # "playingwithfusion"
     "rev",
     # "romi"
-    "sim",
+    "sim"
     # "xrp"
 
     
